Version 3.0.6 (2008-03-xx)
	Added elements to the default value of valid_elements option. It now contains all XHTML strict elements and a few transitional.
	Added more accessibility fixes, it's now possible to navigate and close list boxes and split button menus with the keyboard.
	Fixed bug where attribute rules for the DOM Serializer couldn't contain - or _ characters in their names.
	Fixed bug where inlinepopups event blocker and modal dialog blocker elements produced vertical scrollbars.
	Fixed bug where there was a rendering issue with quirks mode in Safari moving the resize handle to an incorrect position.
	Fixed bug with forecolor/backcolor controls on IE. Sometimes elements positioned relative will generate display errors.
	Fixed bug where a p2 was leaking out in the global name space when you selected a color from the forecolor/backcolor controls.
	Fixed bug where empty paragraphs didn't work as expected in browsers other than IE.
	Fixed bug where the load method of the tinymce.dom.ScriptLoader didn't check if the file was already loaded.
	Fixed bug where the load method for the PluginManager and ThemeManager didn't check if a plugin/theme by a specific name was all ready loaded.
	Fixed bug where the theme_advanced_link_targets option didn't work correctly with the advanced themes link dialog. Patch contributed by Arnold B.
	Fixed bug where the style command would merge classes into empty span elements.
	Fixed bug where the style command would remove empty span elements outside the current selection.
	Fixed bug where the fix for the Safari backspace bug removed all editor contents if it was filled with empty paragraphs.
	Fixed bug where alert and confirm boxes opened by the inlinepopups plugin would produce an exception if domain relaxing was used.
	Fixed bug where Safari was adding style attributes to all elements when you paste them into the editor.